--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Feb 11 14:39:16 GMT 2013
+#Wed Feb 13 12:58:55 GMT 2013
 app.grails.version=2.2.0
 app.name=league-maker
 app.version=0.1
+#plugins.mongodb=1.1.0.GA
